--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 
 <head>
     <title>TBD</title>
+    <style>
+        .logo {
+            width: 100px;
+        }
+    </style>
 </head>
 
 <body>
-    <img src="https://www.totalwine.com/global-static-resources/@totalwinelabs/twc-icon/3.13.0/twm-logo-color.svg#twm-logo-color"
-        alt="Total Wine & More" style="width:100px;">
+    <div class="logo"><img
+            src="https://www.totalwine.com/global-static-resources/@totalwinelabs/twc-icon/3.13.0/twm-logo-color.svg#twm-logo-color"
+            alt="Total Wine & More"></div>
     <ul>
         <li>
             <a href="https://totalwine.atlassian.net/browse/DIG-70749">Create and publish a public repository in GitHub
