--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         .logo {
             width: 100px;
         }
+
+        .link1,
+        .link2 {
+            list-style-type: none;
+        }
     </style>
 </head>
 
@@ -15,12 +20,12 @@
             src="https://www.totalwine.com/global-static-resources/@totalwinelabs/twc-icon/3.13.0/twm-logo-color.svg#twm-logo-color"
             alt="Total Wine & More"></div>
     <ul>
-        <li>
+        <li class="link1">
             <a href="https://totalwine.atlassian.net/browse/DIG-70749">Create and publish a public repository in GitHub
                 under
                 your personal account named 'Engineering Training'</a>
         </li>
-        <li>
+        <li class="link2">
             <a href="https://totalwine.atlassian.net/browse/DIG-70771">Create index.html with basic html markup and
                 perform
                 first commit</a>
