--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         li {
             list-style-type: none;
         }
+
+        a:hover,
+        a:active {
+            background-color: #aaaaaa;
+        }
     </style>
 </head>
 
