--- a/index.html
+++ b/index.html
@@ -2,71 +2,84 @@
 <html>
 
 <head>
-    <title>TBD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+        <title>TBD</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-    <style>
-        .logo {
-            width: 100px;
-        }
+        <style>
+                .logo {
+                        width: 100px;
+                }
 
-        li {
-            list-style-type: none;
-        }
+                li {
+                        list-style-type: none;
+                }
 
-        li:hover,
-        li:active {
-            background-color: #aaaaaa;
-        }
+                li:hover,
+                li:active {
+                        background-color: #aaaaaa;
+                }
 
-        .grid-container {
-            display: grid;
-            grid-template-columns: auto auto auto;
-        }
-    </style>
+                .grid-container {
+                        display: grid;
+                        grid-template-columns: auto auto auto;
+                        margin: 50px;
+                }
+
+                .grid-item {
+                        background-color: white;
+                        outline: 1px solid black;
+                        font-family: helvetica;
+                        font-weight: bold;
+                        text-align: left;
+                }
+        </style>
 </head>
 
 <body>
-    <div class="logo"><img
-            src="https://www.totalwine.com/global-static-resources/@totalwinelabs/twc-icon/3.13.0/twm-logo-color.svg#twm-logo-color"
-            alt="Total Wine & More"></div>
-    <ul class="grid-container">
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-70749">Create and
-                publish a public repository in GitHub under your personal account named 'Engineering Training'</a></li>
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-70771">Create
-                index.html with basic html markup and perform first commit</a></li>
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-70804">Add anchor
-                tags for each completed subtasks</a></li>
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-70805">Make
-                unordered list of anchor tags</a></li>
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-70905">Add the
-                TWM logo as an image to the beginning of the body of the page</a></li>
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-70918">Add style
-                attributes to img tag to setting the height and width of the logo</a></li>
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-70993">Add a
-                head, add a style tag to the head, add a class to style tag, move logo styles to style tag, remove
-                inline styles from logo, add class to the logo</a></li>
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-71030">Add a
-                selector inside style tag that targets the list items and removes the bullet</a></li>
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-71062">Pseudo-selectors - Add hover styling to list
-                elements</a></li>
-        <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
-                href="https://totalwine.atlassian.net/browse/DIG-71085">UI
-                Libraries - Add Bootstrap to your page, add check icons to your list, and convert your list into a
-                bootstrap list-group</a></li>
-    </ul>
+        <div class="logo"><img
+                        src="https://www.totalwine.com/global-static-resources/@totalwinelabs/twc-icon/3.13.0/twm-logo-color.svg#twm-logo-color"
+                        alt="Total Wine & More"></div>
+        <ul class="grid-container">
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-70749">Create and
+                                publish a public repository in GitHub under your personal account named 'Engineering
+                                Training'</a></li>
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-70771">Create
+                                index.html with basic html markup and perform first commit</a></li>
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-70804">Add anchor
+                                tags for each completed subtasks</a></li>
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-70805">Make
+                                unordered list of anchor tags</a></li>
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-70905">Add the
+                                TWM logo as an image to the beginning of the body of the page</a></li>
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-70918">Add style
+                                attributes to img tag to setting the height and width of the logo</a></li>
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-70993">Add a
+                                head, add a style tag to the head, add a class to style tag, move logo styles to style
+                                tag, remove
+                                inline styles from logo, add class to the logo</a></li>
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-71030">Add a
+                                selector inside style tag that targets the list items and removes the bullet</a></li>
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-71062">Pseudo-selectors - Add hover
+                                styling to list
+                                elements</a></li>
+                <li class="grid-item"><i class="bi bi-check-circle-fill"></i><a
+                                href="https://totalwine.atlassian.net/browse/DIG-71085">UI
+                                Libraries - Add Bootstrap to your page, add check icons to your list, and convert your
+                                list into a
+                                bootstrap list-group</a></li>
+        </ul>
 </body>
 
 </html>
