--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         display: grid;
                         grid-template-columns: auto auto auto;
                         margin: 50px;
+                        padding: 0px;
                 }
 
                 .grid-item {
@@ -79,6 +80,8 @@
                                 Libraries - Add Bootstrap to your page, add check icons to your list, and convert your
                                 list into a
                                 bootstrap list-group</a></li>
+                <li class="grid-item"></li>
+                <li class="grid-item"></li>
         </ul>
 </body>
 
