--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <style>
                 .logo {
                         width: 100px;
+                        margin: 20px;
                 }
 
                 li {
@@ -35,6 +36,17 @@
                         font-family: helvetica;
                         font-weight: bold;
                         text-align: left;
+                        padding: 20px;
+                }
+
+                .bi-check-circle-fill {
+                        margin-right: 10px;
+                }
+
+                @media only screen and (max-width: 1024px) {
+                        .grid-container {
+                                grid-template-columns: auto;
+                        }
                 }
         </style>
 </head>
