--- a/index.html
+++ b/index.html
@@ -48,10 +48,93 @@
                                 grid-template-columns: auto;
                         }
                 }
+
+                .background-container {
+                        position: fixed;
+                        padding-top: 100px;
+                        left: 0;
+                        top: 0;
+                        width: 100%;
+                        height: 100%;
+                        overflow: auto;
+                        background-color: rgba(0, 0, 0, 0.4);
+                }
+
+                .popup-container {
+                        background-color: white;
+                        width: 300px;
+                        height: 300px;
+                        margin: 0;
+                        position: relative;
+                        top: 50%;
+                        left: 50%;
+                        -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                }
+
+                .spinner-container {
+                        width: 18px;
+                        height: 18px;
+                        margin: 0;
+                        position: relative;
+                        top: 45%;
+                        left: 48%;
+                        -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                        -webkit-animation: spin 2s linear infinite;
+                        animation: spin 2s linear infinite;
+                }
+
+                @-webkit-keyframes spin {
+                        0% {
+                                -webkit-transform: rotate(0deg);
+                        }
+
+                        100% {
+                                -webkit-transform: rotate(360deg);
+                        }
+                }
+
+                @keyframes spin {
+                        0% {
+                                transform: rotate(0deg);
+                        }
+
+                        100% {
+                                transform: rotate(360deg);
+                        }
+                }
+
+                .bi-arrow-clockwise {
+                        margin: 0;
+                        position: relative;
+                        -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                }
+
+                .loadingtext {
+                        margin: 0;
+                        position: relative;
+                        top: 46%;
+                        left: 42%;
+                        -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                        font-family: helvetica;
+                        font-weight: bold;
+                }
         </style>
 </head>
 
 <body>
+        <div class="background-container">
+                <div class="popup-container">
+                        <div class="spinner-container">
+                                <i class="bi bi-arrow-clockwise"></i>
+
+                        </div>
+                        <span class="loadingtext">Loading...</span>
+                </div>
+        </div>
         <div class="logo"><img
                         src="https://www.totalwine.com/global-static-resources/@totalwinelabs/twc-icon/3.13.0/twm-logo-color.svg#twm-logo-color"
                         alt="Total Wine & More"></div>
