--- a/index.html
+++ b/index.html
@@ -2,130 +2,19 @@
 <html>
 
 <head>
-        <title>TBD</title>
+        <title>Engineering Training!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
 
-        <style>
-                .logo {
-                        width: 100px;
-                        margin: 20px;
-                }
-
-                li {
-                        list-style-type: none;
-                }
-
-                li:hover,
-                li:active {
-                        background-color: #aaaaaa;
-                }
-
-                .grid-container {
-                        display: grid;
-                        grid-template-columns: auto auto auto;
-                        margin: 50px;
-                        padding: 0px;
-                }
-
-                .grid-item {
-                        background-color: white;
-                        outline: 1px solid black;
-                        font-family: helvetica;
-                        font-weight: bold;
-                        text-align: left;
-                        padding: 20px;
-                }
-
-                .bi-check-circle-fill {
-                        margin-right: 10px;
-                }
-
-                @media only screen and (max-width: 1024px) {
-                        .grid-container {
-                                grid-template-columns: auto;
-                        }
-                }
-
-                .background-container {
-                        position: fixed;
-                        left: 0;
-                        top: 0;
-                        width: 100%;
-                        height: 100%;
-                        overflow: auto;
-                        background-color: rgba(0, 0, 0, 0.4);
-                }
-
-                .popup-container {
-                        background-color: white;
-                        width: 300px;
-                        height: 300px;
-                        margin: 0;
-                        position: relative;
-                        top: 50%;
-                        left: 50%;
-                        -ms-transform: translate(-50%, -50%);
-                        transform: translate(-50%, -50%);
-                }
-
-                .spinner-container {
-                        width: 18px;
-                        height: 18px;
-                        margin: 0;
-                        position: relative;
-                        top: 45%;
-                        left: 48%;
-                        -ms-transform: translate(-50%, -50%);
-                        transform: translate(-50%, -50%);
-                        -webkit-animation: spin 2s linear infinite;
-                        animation: spin 2s linear infinite;
-                }
-
-                @-webkit-keyframes spin {
-                        0% {
-                                -webkit-transform: rotate(0deg);
-                        }
-
-                        100% {
-                                -webkit-transform: rotate(360deg);
-                        }
-                }
-
-                @keyframes spin {
-                        0% {
-                                transform: rotate(0deg);
-                        }
-
-                        100% {
-                                transform: rotate(360deg);
-                        }
-                }
-
-                .bi-arrow-clockwise {
-                        margin: 0;
-                        position: relative;
-                        -ms-transform: translate(-50%, -50%);
-                        transform: translate(-50%, -50%);
-                }
-
-                .loadingtext {
-                        margin: 0;
-                        position: relative;
-                        top: 46%;
-                        left: 42%;
-                        -ms-transform: translate(-50%, -50%);
-                        transform: translate(-50%, -50%);
-                        font-family: helvetica;
-                        font-weight: bold;
-                }
-        </style>
 </head>
 
 <body>
-        <div class="background-container">
+        <div class="hidden">
                 <div class="popup-container">
                         <div class="spinner-container">
                                 <i class="bi bi-arrow-clockwise"></i>
