--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="styles.css">
-        <script src="script.js"></script>
-
+        
 </head>
 
 <body>
+        <button type="button" id="modal1Button">Open Modal</button>
         <div class="hidden">
                 <div class="popup-container">
                         <div class="spinner-container">
@@ -66,6 +66,7 @@
                 <li class="grid-item"></li>
                 <li class="grid-item"></li>
         </ul>
+        <script src="script.js"></script>
 </body>
 
 </html>
