--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="styles.css">
-        
+
 </head>
 
 <body>
-        <button type="button" id="modal1Button">Open Modal</button>
-        <div class="hidden">
-                <div class="popup-container">
-                        <div class="spinner-container">
-                                <i class="bi bi-arrow-clockwise"></i>
+        <div class="hidden" id="modal">
+                <div class="background-container">
+                        <div class="popup-container">
+                                <div class="spinner-container">
+                                        <i class="bi bi-arrow-clockwise"></i>
 
+                                </div>
+                                <span class="loadingtext">Loading...</span>
                         </div>
-                        <span class="loadingtext">Loading...</span>
                 </div>
         </div>
+        <button id="modalButton">Open Modal</button>
         <div class="logo"><img
                         src="https://www.totalwine.com/global-static-resources/@totalwinelabs/twc-icon/3.13.0/twm-logo-color.svg#twm-logo-color"
                         alt="Total Wine & More"></div>
