--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
                                 </div>
                                 <span class="loadingtext">Loading...</span>
+                                <button class="closeModal">Close Modal</button>
                         </div>
                 </div>
         </div>
