--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <div class="logo"><img
                         src="https://www.totalwine.com/global-static-resources/@totalwinelabs/twc-icon/3.13.0/twm-logo-color.svg#twm-logo-color"
                         alt="Total Wine & More"></div>
-        <ul class="grid-container">
-        </ul>
+        <ul class="grid-container"></ul>
         <script src="script.js"></script>
 </body>
 
