--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+        <div id="root"></div>
         <div class="hidden" id="modal">
                 <div class="background-container">
                         <div class="popup-container">
